icons updaetd in the Welcome section. Issues with the spacing to the right of the screen to be resolved.

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,6 @@ body {
 /*Correction, i've altered the images in photoshop in advance*/
 
 /*background image is too bright apply an overlay to tone it down*/
-
 /*.image-overlay {
     position: absolute;
     top: 0;
@@ -94,6 +93,10 @@ body {
     background-color: #d9d9d9;
 }
 
+.welcome-header {
+    margin:0;
+}
+
 .welcome-lead {
     font-size:16px;
 }
@@ -105,7 +108,13 @@ body {
 
 }
 
-
+.domain i{
+    margin-bottom: 10px;
+    font-size: 45px;
+    line-height: 45px;
+    text-align: center;
+    
+}
 
 .footer-container {
     padding-top: 15px;
